--- a/src/assets/styles/base/mixins.scss
+++ b/src/assets/styles/base/mixins.scss
@@ -14,6 +14,11 @@
   @return $result;
 }
 
+// hexagon shape
+@mixin hexagon-clip-path() {
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+}
+
 // text gradient
 @mixin text-gradient($start-color, $end-color) {
   background: -webkit-linear-gradient(
