--- a/src/components/common/forms/UpdateForm/UpdateForm.module.scss
+++ b/src/components/common/forms/UpdateForm/UpdateForm.module.scss
@@ -17,4 +17,9 @@
       }
     }
   }
+
+  &_submit {
+    padding: 0 toRem(24);
+    min-width: toRem(141);
+  }
 }
